--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!-- HTML文件 -->
 <!DOCTYPE html>
-<html>
-    <body style="background-color: #22272E;">
-        
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="zh-CN">
+<head>
+    <title>Home</title>
+    <meta charset="utf-8">
+    <!-- 引入CSS样式表 -->
+    <link rel="stylesheet" type="text/css" href="home.css">
+</head>
+<body>
+<!-- 应用背景图片的元素 -->
+<div class="background-image"></div>
+</body>
 </html>
