--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
               暂未开放
             </span>
           </a>
-          <a href="chapter_divide_and_conquer/">
+          <a href="">
             <img alt="" src="assets/hero/chapter_divide_and_conquer.png" style="height: 18.681%; left: 32.721%; top: 4.816%;"/>
             <span style="left: 31.42%; top: 8.679%;">
-              暂未开放
+              赛事
             </span>
           </a>
           <a href="chapter_backtracking/">
