--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               算法
             </span>
           </a>
-          <a href="chapter_tree/">
+          <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/markdown/markdown.md">
             <img alt="" src="assets/hero/chapter_tree.png" style="height: 19.615%; left: 80.137%; top: 26.678%;"/>
             <span style="left: 96.159%; top: 44.8%;">
               markdown语法
@@ -127,10 +127,10 @@
               暂未开放
             </span>
           </a>
-          <a href="">
+          <a href="chapter_divide_and_conquer/">
             <img alt="" src="assets/hero/chapter_divide_and_conquer.png" style="height: 18.681%; left: 32.721%; top: 4.816%;"/>
             <span style="left: 31.42%; top: 8.679%;">
-              赛事
+              暂未开放
             </span>
           </a>
           <a href="chapter_backtracking/">
