--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               深度学习
             </span>
           </a>
-          <a href="https://github.com/FreyjaStar/CODING/tree/main/Learning/python#readme">
+          <a href="#"><!--https://github.com/FreyjaStar/CODING/tree/main/Learning/python#readme-->
             <img alt="" src="assets/hero/chapter_graph.png" style="height: 16.112%; left: 51.854%; top: 5.575%;"/>
             <span style="left: 71.195%; top: 6.503%;">
               python入门与进阶
