--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               STM32
             </span>
           </a>
-          <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/%E7%AE%97%E6%B3%95/1.md">
+          <a href="#"><!--https://github.com/FreyjaStar/CODING/blob/main/Learning/%E7%AE%97%E6%B3%95/1.md-->
             <img alt="" src="assets/hero/chapter_hashing.png" style="height: 15.266%; left: 63.281%; top: 27.933%;"/>
             <span style="left: 68.862%; top: 46.292%;">
               算法
@@ -103,7 +103,7 @@
               markdown语法
             </span>
           </a>
-          <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0/1.md">
+          <a href="#"><!--https://github.com/FreyjaStar/CODING/blob/main/Learning/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0/1.md-->
             <img alt="" src="assets/hero/chapter_heap.png" style="height: 10.566%; left: 77.226%; top: 11.559%;"/>
             <span style="left: 88.103%; top: 15.422%;">
               深度学习
