--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/%E6%9C%BA%E5%99%A8%E8%A7%86%E8%A7%89/1.md">
             <img alt="" src="assets/hero/chapter_array_and_linkedlist.png" style="height: 22.242%; left: 73.242%; top: 52.481%;"/>
             <span style="left: 90.897%; top: 76.259%;">
-              机器视觉
+              暂未开放
             </span>
           </a>
           <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/STM32/1.md">
