--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<h1>仓库维护更新中</h1>
+<center><font face="楷体" size=30>通知</font></center>
+<h1>由于Github仓库空间大小限制，</h1>
+<h1>仓库内容迁移</h1>    
+<h1>本网页维护更新中</h1>    
 <h2>更多内容敬请期待...</h2>
