--- a/index.html
+++ b/index.html
@@ -1,5 +1,182 @@
-<center><font face="楷体" size=30>通知</font></center>
-<h1>由于Github仓库空间大小限制，</h1>
-<h1>仓库内容迁移</h1>    
-<h1>本网页维护更新中</h1>    
-<h2>更多内容敬请期待...</h2>
+<!DOCTYPE html>
+<html class="no-js" lang="zh">
+  <head>
+    <meta charset="utf-8"/>
+    <title>Home</title>
+    <link href="assets/stylesheets/main.50c56a3b.min.css" rel="stylesheet"/>
+    <link href="assets/stylesheets/palette.06af60db.min.css" rel="stylesheet"/>
+    <link href="stylesheets/extra.css" rel="stylesheet"/>
+  </head>
+  <body data-md-color-accent="teal" data-md-color-primary="white" data-md-color-scheme="default" dir="ltr" style="background-color: var(--md-body-bg-color);">
+    <input autocomplete="off" class="md-toggle" data-md-toggle="drawer" id="__drawer" type="checkbox"/>
+    <input autocomplete="off" class="md-toggle" data-md-toggle="search" id="__search" type="checkbox"/>
+    <label class="md-overlay" for="__drawer">
+    </label>
+    <div data-md-component="skip">
+    </div>
+    <div data-md-color-primary="black" data-md-color-scheme="slate" data-md-component="announce">
+    </div>
+    <header class="md-header md-header--shadow" data-md-color-primary="black" data-md-color-scheme="slate" data-md-component="header">
+      <nav aria-label="页眉" class="md-header__inner md-grid">
+        <a aria-label="Home" class="md-header__button md-logo" data-md-component="logo" href="." title="Welcome">
+          <img alt="logo" src="assets/images/头像.JPG"/>
+        </a>
+        <label class="md-header__button md-icon" for="__drawer">
+          <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2Z">
+            </path>
+          </svg>
+        </label>
+        <div class="md-header__title" data-md-component="header-title">
+          <div class="md-header__ellipsis">
+            <div class="md-header__topic">
+              <span class="md-ellipsis">
+                Welcome
+              </span>
+            </div>
+            <div class="md-header__topic" data-md-component="header-topic">
+              <span class="md-ellipsis">
+                Home
+              </span>
+            </div>
+          </div>
+        </div>
+        <script>
+          var media,input,key,value,palette=__md_get("__palette");if(palette&&palette.color){"(prefers-color-scheme)"===palette.color.media&&(media=matchMedia("(prefers-color-scheme: light)"),input=document.querySelector(media.matches?"[data-md-color-media='(prefers-color-scheme: light)']":"[data-md-color-media='(prefers-color-scheme: dark)']"),palette.color.media=input.getAttribute("data-md-color-media"),palette.color.scheme=input.getAttribute("data-md-color-scheme"),palette.color.primary=input.getAttribute("data-md-color-primary"),palette.color.accent=input.getAttribute("data-md-color-accent"));for([key,value]of Object.entries(palette.color))document.body.setAttribute("data-md-color-"+key,value)}
+        </script>
+
+        <div class="md-header__source">
+          <a class="md-source" data-md-component="source" href="https://freyjastar.github.io/CODING/" title="作者主页">
+            <div class="md-source__icon md-icon">
+              <svg viewbox="0 0 496 512" xmlns="http://www.w3.org/2000/svg">
+                <path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
+                </path>
+              </svg>
+            </div>
+            <div class="md-source__repository">
+              FreyjaStar
+            </div>
+          </a>
+        </div>
+      </nav>
+    </header>
+    <div class="md-container" data-md-component="container">
+      <section class="home-div" data-md-color-primary="grey" data-md-color-scheme="slate" style="height: min(100vh, 120vw); position: relative; margin-top:-2.4rem; padding: 0; overflow: hidden;">
+        <img alt="" class="hero-bg" src="assets/hero/universe_bg.png"/>
+        <div class="hero-div">
+          <img alt="" src="assets/hero/ground.png" style="position: absolute; width: auto; height: 26.445%; left: 28.211%; top: 54.145%;"/>
+          <img alt="" src="assets/hero/links.png" style="position: absolute; width: auto; height: 78.751%; left: 10.545%; top: 7.326%;"/>
+          <a href="https://github.com/FreyjaStar/">
+            <img alt="" src="assets/hero/astronaut.png" style="height: 46.673%; left: 35.413%; top: 24.343%;"/>
+            <span style="left: 52.244%; top: 20.919%;">
+              FreyjaStar
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/Contests">
+            <img alt="" src="assets/hero/chapter_computational_complexity.png" style="height: 12.347%; left: 36.267%; top: 37.653%;"/>
+            <span style="left: 39.244%; top: 33.919%;">
+              Contests
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/%E6%9C%BA%E5%99%A8%E8%A7%86%E8%A7%89/1.md">
+            <img alt="" src="assets/hero/chapter_array_and_linkedlist.png" style="height: 22.242%; left: 73.242%; top: 52.481%;"/>
+            <span style="left: 90.897%; top: 76.259%;">
+              C/C++（暂未开放）
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/STM32/1.md">
+            <img alt="" src="assets/hero/chapter_stack_and_queue.png" style="height: 14.302%; left: 62.646%; top: 77.875%;"/>
+            <span style="left: 77.571%; top: 91.25%;">
+              STM32（暂未开放）
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/Algorithm/blob/main/README.md"><!---->
+            <img alt="" src="assets/hero/chapter_hashing.png" style="height: 15.266%; left: 63.281%; top: 27.933%;"/>
+            <span style="left: 68.862%; top: 46.292%;">
+              Algorithm
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/python#">
+            <img alt="" src="assets/hero/chapter_tree.png" style="height: 19.615%; left: 80.137%; top: 26.678%;"/>
+            <span style="left: 96.159%; top: 44.8%;">
+              python
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/DeepLearning"><!---->
+            <img alt="" src="assets/hero/chapter_heap.png" style="height: 10.566%; left: 77.226%; top: 11.559%;"/>
+            <span style="left: 88.103%; top: 15.422%;">
+              DeepLearning（暂未开放）
+            </span>
+          </a>
+          <a href=""><!---->
+            <img alt="" src="assets/hero/chapter_graph.png" style="height: 16.112%; left: 51.854%; top: 5.575%;"/>
+            <span style="left: 71.195%; top: 6.503%;">
+
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/Linux/1.md">
+            <img alt="" src="assets/hero/chapter_searching.png" style="height: 15.149%; left: 18.185%; top: 16.404%;"/>
+            <span style="left: 14.556%; top: 20.876%;">
+
+            </span>
+          </a>
+          <a href="https://github.com/FreyjaStar/CODING/blob/main/Learning/Shell/1.md">
+            <img alt="" src="assets/hero/chapter_sorting.png" style="height: 9.574%; left: 25.409%; top: 40.747%;"/>
+            <span style="left: 28.805%; top: 53.808%;">
+              markdown
+            </span>
+          </a>
+          <a href="#">
+            <img alt="" src="assets/hero/chapter_divide_and_conquer.png" style="height: 18.681%; left: 32.721%; top: 4.816%;"/>
+            <span style="left: 31.42%; top: 8.679%;">
+            </span>
+              <!--Linux-->
+          </a>
+          <a href="chapter_backtracking/">
+            <img alt="" src="assets/hero/chapter_backtracking.png" style="height: 17.338%; left: 4.875%; top: 32.925%;"/>
+            <span style="left: 4.742%; top: 50.113%;">
+
+            </span>
+          </a>
+          <a href="chapter_dynamic_programming/">
+            <img alt="" src="assets/hero/chapter_dynamic_programming.png" style="height: 15.47%; left: 9.406%; top: 57.472%;"/>
+            <span style="left: 8.561%; top: 75.351%;">
+
+            </span>
+          </a>
+          <a href="chapter_greedy/">
+            <img alt="" src="assets/hero/chapter_greedy.png" style="height: 14.127%; left: 23.132%; top: 75.803%;"/>
+            <span style="left: 21.619%; top: 86.85%;">
+
+            </span>
+          </a>
+        </div>
+        <div class="heading-div">
+          <img alt="" src="https://readme-typing-svg.demolab.com/?font=Noto;weight=400&amp;duration=3500&amp;pause=2000&amp;color=FFF&amp;center=true&amp;vCenter=true&amp;random=false&amp;width=600&amp;height=200&amp;lines=It+is+you+who+write+all+the+mountains,;and+you+are+the+beauty+of+the+stars.;写尽千山落笔是你，;望尽星辰美丽是你。" style="height: auto; width: 100%; max-width: 600px; position: relative; top: 40px;"/>
+          <div style="pointer-events: auto;">
+            <a class="rounded-button" href="https://github.com/FreyjaStar/CODING">
+              <svg viewbox="0 0 496 512" xmlns="http://www.w3.org/2000/svg">
+                <path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
+                </path>
+              </svg>
+              <span>Repositories</span>
+            </a>
+          </div>
+        </div>
+      </section>
+      <main class="md-main" data-md-component="main" style="height: 0;">
+        <div class="md-main__inner md-grid">
+          <div class="md-sidebar md-sidebar--primary" data-md-component="sidebar" data-md-type="navigation" hidden="">
+            <div class="md-sidebar__scrollwrap">
+              <div class="md-sidebar__inner">
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </main>
+    </div>
+
+  </body>
+</html>
