--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
               
             </span>
           </a>
-          <a href="#">
+          <a href="https://github.com/FreyjaStar/Front-end/blob/main/readme.md">
             <img alt="" src="assets/hero/chapter_greedy.png" style="height: 14.127%; left: 23.132%; top: 75.803%;"/>
             <span style="left: 21.619%; top: 86.85%;">
-              
+              Front-end(持续更新中...)
             </span>
           </a>
         </div>
