--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <a href="https://github.com/FreyjaStar/Algorithm/blob/main/README.md">
             <img alt="" src="assets/hero/chapter_hashing.png" style="height: 15.266%; left: 63.281%; top: 27.933%;"/>
             <span style="left: 68.862%; top: 46.292%;">
-              Algorithm(暂未开放)
+              Algorithm(更新中...)
             </span>
           </a>
           <a href="https://github.com/FreyjaStar/python/blob/main/readme.md">
